# ferris-ui

./: Cargo.toml  Dioxus.toml  cliff.toml  deny.toml
.github/workflows/: build.yml
src/: main.rs
